--- a/src/main/resources/components/configsFooter.fxml
+++ b/src/main/resources/components/configsFooter.fxml
@@ -5,8 +5,8 @@
 <?import javafx.scene.layout.*?>
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.nevertouchgrass.prolific.javafxcontroller.settings.SettingsFooterController"
-            fx:id="settingsFooter"
+            fx:controller="org.nevertouchgrass.prolific.javafxcontroller.settings.RunConfigFooterController"
+            fx:id="configFooter"
             stylesheets="@/css/styles.css" styleClass="settings-footer">
 
     <fx:include source="/icons/fxml/help.fxml" AnchorPane.leftAnchor="24" AnchorPane.topAnchor="0"
@@ -18,9 +18,7 @@
         </padding>
         <Label fx:id="cancelButton" userData="localization:settings_cancel_button" styleClass="settings-cancel-button"
                onMouseClicked="#cancel"/>
-        <Label fx:id="applyButton" userData="localization:settings_apply_button" styleClass="settings-submit-button"
-               disable="true" onMouseClicked="#apply"/>
-        <Label fx:id="submitButton" userData="localization:settings_submit_button" styleClass="settings-submit-button"
+        <Label fx:id="submitButton" userData="localization:config_save_button" styleClass="settings-apply-button" disable="true"
                onMouseClicked="#submit"/>
     </HBox>
 </AnchorPane>
