--- a/src/main/resources/components/configsScreen.fxml
+++ b/src/main/resources/components/configsScreen.fxml
@@ -3,7 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.*?>
 <BorderPane xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.nevertouchgrass.prolific.javafxcontroller.RunConfigScreen"
+            fx:controller="org.nevertouchgrass.prolific.javafxcontroller.settings.RunConfigScreenController"
             stylesheets="@/css/styles.css" styleClass="settingsScreen">
     <top>
         <fx:include fx:id="configsHeader" source="/components/configsHeader.fxml" AnchorPane.topAnchor="0"
@@ -15,10 +15,11 @@
             <padding>
                 <Insets right="8" left="8"/>
             </padding>
+            <fx:include source="configsList.fxml"/>
         </StackPane>
     </center>
 
     <bottom>
-
+        <fx:include source="configsFooter.fxml"/>
     </bottom>
 </BorderPane>
