--- a/src/main/resources/components/configsList.fxml
+++ b/src/main/resources/components/configsList.fxml
@@ -60,7 +60,7 @@
         </padding>
 
         <columnConstraints>
-            <ColumnConstraints halignment="RIGHT"/>
+            <ColumnConstraints halignment="LEFT"/>
             <ColumnConstraints hgrow="ALWAYS" />
         </columnConstraints>
 
