--- a/src/main/resources/components/configsOptionGradle.fxml
+++ b/src/main/resources/components/configsOptionGradle.fxml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import org.nevertouchgrass.prolific.components.ArrayListHolder?>
-<?import javafx.scene.control.ComboBox?>
+<?import org.nevertouchgrass.prolific.components.SpinnerArc?>
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="org.nevertouchgrass.prolific.javafxcontroller.settings.options.SettingsOptionGradle">
@@ -24,7 +23,12 @@
 
             <Label fx:id="task" userData="localization:config_task" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
             <VBox GridPane.rowIndex="2" GridPane.columnIndex="1">
-                <ComboBox fx:id="taskSetting"/>
+                <HBox spacing="4">
+                    <ComboBox fx:id="taskSetting"/>
+                    <StackPane fx:id="loadingIndicator">
+                        <SpinnerArc radius="8"/>
+                    </StackPane>
+                </HBox>
                 <Label fx:id="taskErrorMessage" managed="false" visible="false" styleClass="error"
                        userData="localization:config_error_empty_task"/>
             </VBox>
