--- a/src/main/resources/css/styles.css
+++ b/src/main/resources/css/styles.css
@@ -795,11 +795,13 @@
     -fx-text-fill: #DFE1E5;
     -fx-border-color: transparent;
 }
+
 #profilesPanel:hover .profiles-combo-box .combo-box-popup .list-cell {
     -fx-background-color: #2B2D30;
     -fx-text-fill: #DFE1E5;
     -fx-border-color: transparent;
 }
+
 #profilesPanel:hover .profiles-combo-box .combo-box-popup .list-cell:hover {
     -fx-background-color: #494B4E;
 }
@@ -863,6 +865,11 @@
     -fx-background-color: #CCCCCC;
 }
 
+.styled-text-area .text {
+    -fx-fill: #DFE1E5;
+    -fx-font-family: "JetBrains Mono";
+    -fx-background-color: transparent;
+}
 
 /** {*/
 /*    -fx-border-width: 1px;*/
