Add a delete button for manually created run configs. Enhance a project's configuration list

--- a/src/main/resources/css/styles.css
+++ b/src/main/resources/css/styles.css
@@ -435,7 +435,7 @@
     -fx-background-color: #444;
 }
 
-.menu-item-disabled:hover {
+.menu-item:disabled {
     -fx-background-color: transparent;
 }
 
