--- a/src/main/resources/components/configsOptionMaven.fxml
+++ b/src/main/resources/components/configsOptionMaven.fxml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import org.nevertouchgrass.prolific.components.ArrayListHolder?>
-<?import javafx.geometry.Insets?>
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.nevertouchgrass.prolific.javafxcontroller.settings.options.SettingsOptionPython">
+            fx:controller="org.nevertouchgrass.prolific.javafxcontroller.settings.options.SettingsOptionMaven">
     <fx:define>
         <ArrayListHolder fx:id="options">
             <Label fx:id="configName" userData="localization:config_config_name"
@@ -22,22 +20,13 @@
                    GridPane.columnIndex="0"/>
             <TextField fx:id="argumentsSetting" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
 
-            <Label fx:id="scriptPath" userData="localization:setting_script_path"
+            <Label fx:id="task" userData="localization:config_task"
                    GridPane.rowIndex="2" GridPane.columnIndex="0"/>
-
-            <HBox spacing="8" GridPane.rowIndex="2" GridPane.columnIndex="1">
-                <StackPane fx:id="scriptPathChooser" onMouseClicked="#chooseFilePath" styleClass="icon-button">
-                    <padding>
-                        <Insets topRightBottomLeft="4"/>
-                    </padding>
-                    <fx:include source="/icons/fxml/folder.fxml"/>
-                </StackPane>
-                <VBox HBox.hgrow="ALWAYS">
-                    <TextField fx:id="scriptPathSetting"/>
-                    <Label fx:id="scriptPathErrorMessage" managed="false" visible="false" styleClass="error"
-                           userData="localization:setting_path_doesnt_exist"/>
-                </VBox>
-            </HBox>
+            <VBox GridPane.rowIndex="2" GridPane.columnIndex="1">
+                <TextField fx:id="taskSetting"/>
+                <Label fx:id="taskErrorMessage" managed="false" visible="false" styleClass="error"
+                       userData="localization:config_error_empty_task"/>
+            </VBox>
         </ArrayListHolder>
     </fx:define>
 
