--- a/src/main/resources/css/styles.css
+++ b/src/main/resources/css/styles.css
@@ -871,6 +871,10 @@
     -fx-background-color: transparent;
 }
 
+.remove-bin:hover .remove-bin-icon {
+    -fx-fill: #E46868;
+}
+
 /** {*/
 /*    -fx-border-width: 1px;*/
 /*    -fx-border-color: red;*/
