--- a/src/main/resources/components/settingsFooter.fxml
+++ b/src/main/resources/components/settingsFooter.fxml
@@ -10,7 +10,7 @@
             stylesheets="@/css/styles.css" styleClass="settings-footer">
 
     <fx:include source="/icons/fxml/help.fxml" AnchorPane.leftAnchor="24" AnchorPane.topAnchor="0"
-                AnchorPane.bottomAnchor="0"/>
+                onMouseClicked="#help" AnchorPane.bottomAnchor="0"/>
 
     <HBox fx:id="content" AnchorPane.rightAnchor="16" spacing="8">
         <padding>
