--- a/src/main/resources/components/logsAndMetricsPanel.fxml
+++ b/src/main/resources/components/logsAndMetricsPanel.fxml
@@ -35,7 +35,7 @@
             <Insets top="12" bottom="12" right="16" left="16"/>
         </padding>
         <HBox styleClass="logs-button-container">
-            <Label userData="localization:logs_button" fx:id="logsButton" styleClass="logs-button-selected" onMouseClicked="#switchLogsButtonStyle"/>
+            <Label userData="localization:logs_button" fx:id="logsButton" styleClass="logs-button,selected"  onMouseClicked="#switchLogsButtonStyle"/>
             <Label userData="localization:metrics_button" fx:id="metricsButton" styleClass="logs-button" onMouseClicked="#switchLogsButtonStyle"/>
         </HBox>
     </HBox>
