--- a/src/main/resources/components/sortingBar.fxml
+++ b/src/main/resources/components/sortingBar.fxml
@@ -7,48 +7,41 @@
       xmlns:fx="http://javafx.com/fxml"
       fx:id="root"
       fx:controller="org.nevertouchgrass.prolific.javafxcontroller.SortingBarController" spacing="8">
-    <HBox spacing="8" styleClass="search-bar-hbox" HBox.hgrow="ALWAYS" alignment="CENTER_LEFT">
+    <HBox fx:id="sortByTitleArrowContainer" spacing="8" styleClass="search-bar-hbox" HBox.hgrow="ALWAYS"
+          alignment="CENTER_LEFT" onMouseClicked="#sort">
         <padding>
             <Insets right="8" left="8"/>
         </padding>
         <fx:include source="/icons/fxml/alphaSort.fxml"/>
         <Label fx:id="sortByTitleLabel" userData="localization:sort_by_title"/>
         <Region HBox.hgrow="ALWAYS"/>
-        <HBox fx:id="sortByTitleArrowContainer" alignment="CENTER_RIGHT">
-            <fx:include source="/icons/fxml/defaultSorting.fxml"/>
-        </HBox>
+        <fx:include source="/icons/fxml/defaultSorting.fxml"/>
     </HBox>
-    <HBox spacing="8" styleClass="search-bar-hbox" HBox.hgrow="ALWAYS" alignment="CENTER_LEFT">
+    <HBox fx:id="sortByTypeArrowContainer" spacing="8" styleClass="search-bar-hbox" HBox.hgrow="ALWAYS" alignment="CENTER_LEFT" onMouseClicked="#sort">
         <padding>
             <Insets right="8" left="8"/>
         </padding>
         <fx:include source="/icons/fxml/typeSort.fxml"/>
         <Label fx:id="sortByTypeLabel" userData="localization:sort_by_type"/>
         <Region HBox.hgrow="ALWAYS"/>
-        <HBox fx:id="sortByTypeArrowContainer" alignment="CENTER_RIGHT">
-            <fx:include source="/icons/fxml/defaultSorting.fxml"/>
-        </HBox>
+        <fx:include source="/icons/fxml/defaultSorting.fxml"/>
     </HBox>
-    <HBox spacing="8" styleClass="search-bar-hbox" HBox.hgrow="ALWAYS" alignment="CENTER_LEFT">
+    <HBox fx:id="sortByRunningArrowContainer" spacing="8" styleClass="search-bar-hbox" HBox.hgrow="ALWAYS" alignment="CENTER_LEFT" onMouseClicked="#sort">
         <padding>
             <Insets right="8" left="8"/>
         </padding>
         <fx:include source="/icons/fxml/runningSort.fxml"/>
         <Label fx:id="sortByRunningLabel" userData="localization:sort_by_running"/>
         <Region HBox.hgrow="ALWAYS"/>
-        <HBox fx:id="sortByRunningArrowContainer" alignment="CENTER_RIGHT">
-            <fx:include source="/icons/fxml/defaultSorting.fxml"/>
-        </HBox>
+        <fx:include source="/icons/fxml/defaultSorting.fxml"/>
     </HBox>
-    <HBox spacing="8" styleClass="search-bar-hbox" HBox.hgrow="ALWAYS" alignment="CENTER_LEFT">
+    <HBox fx:id="sortByStarredArrowContainer" spacing="8" styleClass="search-bar-hbox" HBox.hgrow="ALWAYS" alignment="CENTER_LEFT" onMouseClicked="#sort">
         <padding>
             <Insets right="8" left="8"/>
         </padding>
         <fx:include source="/icons/fxml/starredSort.fxml"/>
         <Label fx:id="sortByStarredLabel" userData="localization:sort_by_starred"/>
         <Region HBox.hgrow="ALWAYS"/>
-        <HBox fx:id="sortByStarredArrowContainer" alignment="CENTER_RIGHT">
-            <fx:include source="/icons/fxml/defaultSorting.fxml"/>
-        </HBox>
+        <fx:include source="/icons/fxml/defaultSorting.fxml"/>
     </HBox>
 </HBox>
