--- a/src/main/resources/icons/fxml/defaultSorting.fxml
+++ b/src/main/resources/icons/fxml/defaultSorting.fxml
@@ -10,11 +10,11 @@
     </padding>
     <Group>
         <!-- First Path -->
-        <SVGPath
+        <SVGPath styleClass="sort-arrow"
                 content="M4.5 6L8 2.5L11.5 6"
                 stroke="#6C707E" strokeLineCap="round" strokeLineJoin="round"/>
         <!-- Second Path -->
-        <SVGPath
+        <SVGPath styleClass="sort-arrow"
                 content="M4.5 10L8 13.5L11.5 10"
                 stroke="#6C707E" strokeLineCap="round" strokeLineJoin="round"/>
     </Group>
