--- a/src/main/resources/icons/fxml/sortArrowDown.fxml
+++ b/src/main/resources/icons/fxml/sortArrowDown.fxml
@@ -9,7 +9,7 @@
         <Insets top="6" bottom="6" right="6" left="6"/>
     </padding>
     <Group>
-        <SVGPath
+        <SVGPath styleClass="sort-arrow"
                 content="M4.5 10L8 13.5L11.5 10"
                 stroke="#6C707E" strokeLineCap="round" strokeLineJoin="round"/>
     </Group>
