--- a/src/main/resources/icons/fxml/sortArrowUp.fxml
+++ b/src/main/resources/icons/fxml/sortArrowUp.fxml
@@ -10,7 +10,7 @@
     </padding>
     <Group>
         <!-- First Path -->
-        <SVGPath
+        <SVGPath styleClass="sort-arrow"
                 content="M4.5 6L8 2.5L11.5 6"
                 stroke="#6C707E" strokeLineCap="round" strokeLineJoin="round"/>
     </Group>
