Implement OS-specific header components and enhance window button functionality

--- a/src/main/resources/components/configsScreen.fxml
+++ b/src/main/resources/components/configsScreen.fxml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.StackPane?>
 <BorderPane xmlns:fx="http://javafx.com/fxml"
             fx:controller="org.nevertouchgrass.prolific.javafxcontroller.settings.RunConfigScreenController"
             stylesheets="@/css/styles.css" styleClass="settingsScreen">
     <top>
-        <fx:include fx:id="configsHeader" source="/components/configsHeader.fxml" AnchorPane.topAnchor="0"
-                    AnchorPane.rightAnchor="0" AnchorPane.leftAnchor="0"/>
+        <StackPane fx:id="configsHeader"/>
     </top>
 
     <center>
