--- a/src/main/resources/components/settingsScreen.fxml
+++ b/src/main/resources/components/settingsScreen.fxml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.StackPane?>
 <BorderPane xmlns:fx="http://javafx.com/fxml"
             fx:controller="org.nevertouchgrass.prolific.javafxcontroller.settings.SettingsScreenController"
             stylesheets="@/css/styles.css"
             fx:id="settingsScreen" styleClass="settingsScreen">
     <top>
-        <fx:include fx:id="settingsHeader" source="/components/settingsHeader.fxml"/>
+        <StackPane fx:id="settingsHeader"/>
     </top>
 
     <center>
