--- a/src/main/resources/components/licenseWindow.fxml
+++ b/src/main/resources/components/licenseWindow.fxml
@@ -9,14 +9,14 @@
          <children>
             <TextField fx:id="nameField" layoutX="81.0" layoutY="61.0" prefHeight="26.0" prefWidth="234.0" promptText="Company name" stylesheets="@../css/styles.css" />
             <TextField fx:id="licenseField" layoutX="83.0" layoutY="135.0" prefHeight="26.0" prefWidth="234.0" promptText="License" />
-            <Button fx:id="activateLicBut" layoutX="170.0" layoutY="201.0" mnemonicParsing="false" onMouseClicked="#activateBut" text="Activate" />
+            <Button fx:id="activateLicenseButton" layoutX="170.0" layoutY="201.0" mnemonicParsing="false" onMouseClicked="#activateLicenseButtonClicked" text="Activate" />
             <Label fx:id="licenseLabel" layoutX="22.0" layoutY="133.0" prefHeight="26.0" prefWidth="350.0" style="visibility: hidden;" text="Your license: " textFill="WHITE" />
             <Label fx:id="yourNameLabel" layoutX="149.0" layoutY="59.0" prefHeight="34.0" prefWidth="184.0" style="visibility: hidden;" text="Your name: " />
-            <Button fx:id="createLicBut" layoutX="175.0" layoutY="201.0" mnemonicParsing="false" onMouseClicked="#createLic" text="Create" />
-            <Button fx:id="createLicBut1" layoutX="185.0" layoutY="201.0" mnemonicParsing="false" onMouseClicked="#setChangeLic" text="Create" />
+            <Button fx:id="createLicenseButton" layoutX="175.0" layoutY="201.0" mnemonicParsing="false" onMouseClicked="#createLicense" text="Create" />
+            <Button fx:id="createLicenseButtonSecondary" layoutX="185.0" layoutY="201.0" mnemonicParsing="false" onMouseClicked="#changeLicense" text="Create" />
          </children></AnchorPane>
-      <Button fx:id="activateBut" layoutX="14.0" layoutY="6.0" mnemonicParsing="false" onMouseClicked="#activateLic" text="Activate license" />
-      <Button fx:id="createBut" layoutX="278.0" layoutY="6.0" mnemonicParsing="false" onMouseClicked="#createBut" text="Create license" />
-      <Button fx:id="changeLic" layoutX="151.0" layoutY="6.0" mnemonicParsing="false" onMouseClicked="#setChangeLicBut" text="Change license" />
+      <Button fx:id="activateButton" layoutX="14.0" layoutY="6.0" mnemonicParsing="false" onMouseClicked="#activateLicenseField" text="Activate license" />
+      <Button fx:id="createButton" layoutX="278.0" layoutY="6.0" mnemonicParsing="false" onMouseClicked="#createNewLicenseButtonClicked" text="Create license" />
+      <Button fx:id="changeLicenseButton" layoutX="151.0" layoutY="6.0" mnemonicParsing="false" onMouseClicked="#displayChangeLicenseButton" text="Change license" />
    </children>
 </AnchorPane>
