--- a/src/main/resources/components/mainScreen.fxml
+++ b/src/main/resources/components/mainScreen.fxml
@@ -6,12 +6,12 @@
             fx:controller="org.nevertouchgrass.prolific.javafxcontroller.MainScreenController"
             stylesheets="@/css/styles.css"
             fx:id="mainScreen">
-    <fx:include fx:id="headerComponent" source="/components/header.fxml" AnchorPane.leftAnchor="0"
-                AnchorPane.rightAnchor="0"/>
+    <StackPane fx:id="header" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0"/>
+
     <SplitPane AnchorPane.rightAnchor="16" AnchorPane.leftAnchor="16" AnchorPane.bottomAnchor="64"
                AnchorPane.topAnchor="128" dividerPositions="0.5">
         <fx:include source="projectsPanel.fxml" fx:id="projectsPanel" HBox.hgrow="ALWAYS"/>
         <fx:include source="logsAndMetricsPanel.fxml" fx:id="logsAndMetricsPanel"/>
     </SplitPane>
-    <fx:include source="footer.fxml"  AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0"/>
+    <fx:include fx:id="footer" source="footer.fxml"  AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0"/>
 </AnchorPane>
