Profiles and settings guides (#77)
* Profiles and settings guides

* Help button

* Options

* update readme

* System threads

--- a/src/main/resources/components/configsFooter.fxml
+++ b/src/main/resources/components/configsFooter.fxml
@@ -10,7 +10,7 @@
             stylesheets="@/css/styles.css" styleClass="settings-footer">
 
     <fx:include source="/icons/fxml/help.fxml" AnchorPane.leftAnchor="24" AnchorPane.topAnchor="0"
-                AnchorPane.bottomAnchor="0"/>
+                AnchorPane.bottomAnchor="0" onMouseClicked="#help"/>
 
     <HBox fx:id="content" AnchorPane.rightAnchor="16" spacing="8" alignment="CENTER">
         <padding>
