Settings scroll UX

--- a/src/main/resources/components/settingsList.fxml
+++ b/src/main/resources/components/settingsList.fxml
@@ -1,12 +1,14 @@
+<!--suppress JavaFxEventHandler -->
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.VBox?>
 <?import org.nevertouchgrass.prolific.components.ArrayListHolder?>
-<!--suppress JavaFxEventHandler -->
-<SplitPane dividerPositions="0.15" fx:controller="org.nevertouchgrass.prolific.javafxcontroller.settings.SettingsListController"
+<SplitPane dividerPositions="0.15"
+           fx:controller="org.nevertouchgrass.prolific.javafxcontroller.settings.SettingsListController"
            xmlns:fx="http://javafx.com/fxml" stylesheets="@/css/styles.css" styleClass="settings-split-pane"
            onMouseEntered="#handleMouseEntered">
     <VBox spacing="8">
@@ -26,16 +28,18 @@
         </fx:define>
     </VBox>
 
-    <GridPane fx:id="settingsList" hgap="24" vgap="32">
-        <padding>
-            <Insets top="32" right="16" bottom="16" left="16"/>
-        </padding>
+    <ScrollPane fitToWidth="true" fitToHeight="true">
+        <GridPane fx:id="settingsList" hgap="24" vgap="32">
+            <padding>
+                <Insets top="32" right="16" bottom="16" left="16"/>
+            </padding>
 
-        <columnConstraints>
-            <ColumnConstraints halignment="LEFT"/>
-            <ColumnConstraints hgrow="ALWAYS" />
-        </columnConstraints>
+            <columnConstraints>
+                <ColumnConstraints halignment="LEFT"/>
+                <ColumnConstraints hgrow="ALWAYS"/>
+            </columnConstraints>
 
-    </GridPane>
+        </GridPane>
+    </ScrollPane>
 
 </SplitPane>
