--- a/src/main/resources/components/settingsScreen.fxml
+++ b/src/main/resources/components/settingsScreen.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.control.ScrollPane?>
 <BorderPane xmlns:fx="http://javafx.com/fxml"
             fx:controller="org.nevertouchgrass.prolific.javafxcontroller.settings.SettingsScreenController"
             stylesheets="@/css/styles.css"
@@ -12,12 +13,12 @@
     </top>
 
     <center>
-        <StackPane>
+        <ScrollPane fitToHeight="true" fitToWidth="true">
             <padding>
                 <Insets right="8" left="8"/>
             </padding>
             <fx:include fx:id="settingsList" source="settingsList.fxml"/>
-        </StackPane>
+        </ScrollPane>
     </center>
 
     <bottom>
