--- a/src/main/resources/components/configsScreen.fxml
+++ b/src/main/resources/components/configsScreen.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.control.ScrollPane?>
 <BorderPane xmlns:fx="http://javafx.com/fxml"
             fx:controller="org.nevertouchgrass.prolific.javafxcontroller.settings.RunConfigScreenController"
             stylesheets="@/css/styles.css" styleClass="settingsScreen">
@@ -12,12 +11,12 @@
     </top>
 
     <center>
-        <ScrollPane>
+        <StackPane>
             <padding>
                 <Insets right="8" left="8"/>
             </padding>
             <fx:include source="configsList.fxml"/>
-        </ScrollPane>
+        </StackPane>
     </center>
 
     <bottom>
