--- a/src/main/resources/components/settingsList.fxml
+++ b/src/main/resources/components/settingsList.fxml
@@ -1,22 +1,25 @@
+<!--suppress JavaFxEventHandler -->
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.VBox?>
 <?import org.nevertouchgrass.prolific.components.ArrayListHolder?>
-<!--suppress JavaFxEventHandler -->
 <SplitPane dividerPositions="0.15" fx:controller="org.nevertouchgrass.prolific.javafxcontroller.settings.SettingsListController"
            xmlns:fx="http://javafx.com/fxml" stylesheets="@/css/styles.css" styleClass="settings-split-pane"
            onMouseEntered="#handleMouseEntered">
-    <VBox spacing="8">
+    <VBox>
         <padding>
             <Insets top="16" bottom="16" left="8" right="8"/>
         </padding>
-        <Label fx:id="general" id="general" userData="localization:settings_option_general" styleClass="settings-option"
-               onMouseClicked="#setSettingsList"/>
-        <Label fx:id="environment" id="environment" userData="localization:settings_option_environment"
-               styleClass="settings-option" onMouseClicked="#setSettingsList"/>
+        <ScrollPane fitToHeight="true" fitToWidth="true">
+            <VBox spacing="8">
+                <Label fx:id="general" id="general" userData="localization:settings_option_general" styleClass="settings-option"
+                       onMouseClicked="#setSettingsList"/>
+                <Label fx:id="environment" id="environment" userData="localization:settings_option_environment"
+                       styleClass="settings-option" onMouseClicked="#setSettingsList"/>
+            </VBox>
+        </ScrollPane>
 
         <fx:define>
             <ArrayListHolder fx:id="settingsLabels">
@@ -26,16 +29,18 @@
         </fx:define>
     </VBox>
 
-    <GridPane fx:id="settingsList" hgap="24" vgap="32">
-        <padding>
-            <Insets top="32" right="16" bottom="16" left="16"/>
-        </padding>
+    <ScrollPane fitToWidth="true" fitToHeight="true">
+        <GridPane fx:id="settingsList" hgap="24" vgap="32">
+            <padding>
+                <Insets top="32" right="16" bottom="16" left="16"/>
+            </padding>
 
-        <columnConstraints>
-            <ColumnConstraints halignment="LEFT"/>
-            <ColumnConstraints hgrow="ALWAYS" />
-        </columnConstraints>
+            <columnConstraints>
+                <ColumnConstraints halignment="LEFT"/>
+                <ColumnConstraints hgrow="ALWAYS" />
+            </columnConstraints>
 
-    </GridPane>
+        </GridPane>
+    </ScrollPane>
 
 </SplitPane>
