--- a/src/main/resources/css/styles.css
+++ b/src/main/resources/css/styles.css
@@ -928,58 +928,78 @@
     -fx-padding: 10px;
 }
 
+.dialog-pane > .header-panel {
+    -fx-background-color: transparent;
+    -fx-padding: 16;
+}
+
+.dialog-pane > .content.label {
+    -fx-padding: 32;
+}
+
+.dialog-pane-text {
+    -fx-fill: #DFE1E5;
+    -fx-font-family: "JetBrains Mono";
+    -fx-font-size: 1.1em;
+}
+
+.dialog-pane > .button-bar {
+    -fx-background-color: transparent;
+    -fx-padding: 8;
+}
+
 /* Dark theme for dialog */
-.dark-dialog {
-    -fx-background-color: #333333;
-    -fx-text-fill: white;
-}
+/*.dark-dialog {*/
+/*    -fx-background-color: #333333;*/
+/*    -fx-text-fill: white;*/
+/*}*/
 
-.dark-dialog .content {
-    -fx-background-color: #333333;
-    -fx-text-fill: white;
-    -fx-padding: 10px;
-}
+/*.dark-dialog .content {*/
+/*    -fx-background-color: #333333;*/
+/*    -fx-text-fill: white;*/
+/*    -fx-padding: 10px;*/
+/*}*/
 
-.dark-dialog .dark-text {
-    -fx-text-fill: white;
-}
+/*.dark-dialog .dark-text {*/
+/*    -fx-text-fill: white;*/
+/*}*/
 
-.dark-dialog .header-panel {
-    -fx-background-color: #333333;
-}
+/*.dark-dialog .header-panel {*/
+/*    -fx-background-color: #333333;*/
+/*}*/
 
-.dark-dialog > *.button-bar > *.container {
-    -fx-background-color: #333333;
-}
+/*.dark-dialog > *.button-bar > *.container {*/
+/*    -fx-background-color: #333333;*/
+/*}*/
 
-.dark-dialog > *.label.content {
-    -fx-background-color: #333333;
-    -fx-text-fill: white;
-    -fx-font-size: 14px;
-}
+/*.dark-dialog > *.label.content {*/
+/*    -fx-background-color: #333333;*/
+/*    -fx-text-fill: white;*/
+/*    -fx-font-size: 14px;*/
+/*}*/
 
-.dark-button {
-    -fx-background-color: #4a6cd4;
-    -fx-text-fill: white;
-    -fx-cursor: hand;
-}
+/*.dark-button {*/
+/*    -fx-background-color: #4a6cd4;*/
+/*    -fx-text-fill: white;*/
+/*    -fx-cursor: hand;*/
+/*}*/
 
-.dark-button:hover {
-    -fx-background-color: #5a7ce4;
-}
+/*.dark-button:hover {*/
+/*    -fx-background-color: #5a7ce4;*/
+/*}*/
 
-.dark-button-bar {
-    -fx-background-color: #333333;
-}
+/*.dark-button-bar {*/
+/*    -fx-background-color: #333333;*/
+/*}*/
 
 
 /* Fix for potential white background in content area */
-.dialog-pane > .content.label {
-    -fx-background-color: #333333;
-    -fx-text-fill: white;
-    -fx-padding: 10px;
-    -fx-text-alignment: left;
-}
+/*.dialog-pane > .content.label {*/
+/*    -fx-background-color: #333333;*/
+/*    -fx-text-fill: white;*/
+/*    -fx-padding: 10px;*/
+/*    -fx-text-alignment: left;*/
+/*}*/
 
 
 /** {*/
